# wzrdxos

./: .gitignore  CONTRIBUTING.md  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
artifacts/agents/ceo/: agent.md
artifacts/agents/cfo/: agent.md
artifacts/agents/chro/: agent.md
artifacts/agents/cko/: agent.md
artifacts/agents/cmo/: agent.md
artifacts/agents/coo/: agent.md
artifacts/agents/cqo/: agent.md
artifacts/agents/cro/: agent.md
artifacts/agents/cto/: agent.md
artifacts/agents/ea/: agent.md
artifacts/agents/paulo/: agent.md
artifacts/plugins/admin/: plugins.json
artifacts/plugins/ceo/: plugins.json
artifacts/plugins/core/: plugins.json
artifacts/plugins/eng/: plugins.json
artifacts/plugins/fin/: plugins.json
artifacts/plugins/growth/: plugins.json
artifacts/plugins/knowledge/: plugins.json
artifacts/plugins/marketing/: plugins.json
artifacts/plugins/ops/: plugins.json
artifacts/plugins/rh/: plugins.json
artifacts/skills/admin/buyback-audit/: SKILL.md
artifacts/workflows/adversarial-review/: workflow.mjs
artifacts/workflows/balanced-deliberation/: workflow.mjs
artifacts/workflows/judge-panel/: workflow.mjs
docs/: constitution.md  eval-baseline.md  formats.md  kb-design.md  org.md  roadmap.md  routing.md  runtimes.md  skills.md
docs/superpowers/plans/: 2026-06-09-ceo-pilot.md
scripts/: trigger_eval.py
services/kb/: README.md  pyproject.toml
services/kb/src/wzrdx_kb/: __init__.py  __main__.py  config.py  digest.py  embed.py  graph.py  ingest.py  server.py  service.py  store.py
services/kb/tests/: test_digest.py  test_store.py
(+99 files in other folders)
