[project]
name = "wzrdx-kb"
version = "0.1.0"
description = "WZRDX Knowledge Base worker — ingestion, embeddings, vector index and RAG, exposed to Claude Code over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "WizardingCode" }]
dependencies = [
    # M1 keeps runtime deps minimal; the MCP server is a stub.
    # The real ingestion/RAG stack (embeddings, vector store) is chosen in M2.
    "mcp>=1.2.0",
]

[project.scripts]
wzrdx-kb = "wzrdx_kb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wzrdx_kb"]

[tool.uv]
package = true
