[project]
name = "wzrdx-kb"
version = "0.1.0"
description = "wzrdxOS Knowledge Base worker — Graphify graph + LanceDB vectors, exposed to Claude Code over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "WizardingCode" }]
dependencies = [
    "mcp>=1.2.0",
    # Vector layer (local-first, cross-platform wheels: macOS/Linux/Windows).
    "lancedb>=0.15",
    "fastembed>=0.4",
    "pyarrow>=17",
    # Graphify (the knowledge-graph engine) is installed separately as a `uv tool`
    # (`uv tool install graphifyy`) and invoked via the `graphify` CLI — see kb-design.md.
]

[project.scripts]
wzrdx-kb = "wzrdx_kb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wzrdx_kb"]

[tool.uv]
package = true
